--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
     <title>Front-end developer - Sofiia Telychko</title>
   </head>
   <body>
-    <h2>Sofiia Telychko</h2>
-    <h1>Front-end developer</h1>
     <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Sofiia Telychko</a>
@@ -44,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About me</a>
@@ -59,5 +57,7 @@
         </div>
       </div>
     </nav>
+    <h2>Sofiia Telychko</h2>
+    <h1>Front-end developer</h1>
   </body>
 </html>
