--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Sofiia Telychko</a>
+        <a class="navbar-brand btn-close-white" href="/">Sofiia Telychko</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About me</a>
