Change homepage style
Add row, change fonts, margin

--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
         </div>
       </div>
     </nav>
-    <h2>Sofiia Telychko</h2>
-    <h1>Front-end developer</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h1>Sofiia Telychko</h1>
+          <h2>Front-end developer</h2>
+          <p>Hello! My name is Sofiia</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
