--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
       <div class="row">
         <div class="col-6">
           <h1>Sofiia Telychko</h1>
-          <h2>Front-end developer</h2>
-          <p>Hello! My name is Sofiia</p>
+        </div>
+        <div class="col-6 image-container">
+          <div class="second-heading">
+            <h2>Front-end developer</h2>
+          </div>
         </div>
       </div>
     </div>
