--- a/index.html
+++ b/index.html
@@ -73,5 +73,69 @@
         </div>
       </div>
     </div>
+    <p>Project which my best projects be choice to show</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 rounded">
+          <img
+            src="/imges/SharedScreenshot.jpg"
+            class="img-fluid"
+            alt="Weather app picture"
+          />
+        </div>
+        <div class="col-md-6">
+          <h2 class="mb-6 fs-1">Weather app</h2>
+          <p></p>
+          <div class="pt-4">
+            <a
+              href="https://mellifluous-squirrel-c3a660.netlify.app/"
+              class="primary-link"
+              title="Weather app"
+              >Visit website
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-md-6">
+          <h2 class="mb-6 fs-1">Weather App</h2>
+          <p>
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <div class="mb-5 mt-5">
+            <a href="#" class="primary-link" title="Weather App"
+              >Visit website</a
+            >
+          </div>
+        </div>
+        <div class="col-md-6 rounded">
+          <img
+            src="/imges/WeqatherProject.jpg"
+            class="img-fluid"
+            alt="Weather app picture"
+          />
+        </div>
+        <div class="col-md-6">
+          <h2 class="mb-6 fs-1">Weather App</h2>
+          <p>
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <div class="mb-5 mt-5">
+            <a
+              href="https://app.netlify.com/sites/tubular-beignet-9d4d5b/overview"
+              class="primary-link"
+              title="Weather app"
+              >Lounch Weather app</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
