Add email and paragraph

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
       </div>
     </div>
-    <p>Project which my best projects be choice to show</p>
+    <p class="between-text">Project which my best projects be choice to show</p>
     <div class="container">
       <div class="row">
         <div class="col-md-6 rounded">
@@ -84,7 +84,7 @@
           />
         </div>
         <div class="col-md-6">
-          <h2 class="mb-6 fs-1">Weather app</h2>
+          <h2 class="mb-6 fs-1 app-name">Weather app</h2>
           <p>
             Far far away, behind the word mountains, far from the countries
             Vokalia and Consonantia, there live the blind texts. Separated they
@@ -103,7 +103,7 @@
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <h2 class="mb-6 fs-1">Weather App</h2>
+          <h2 class="mb-6 fs-1 app-name">Weather App</h2>
           <p>
             Far far away, behind the word mountains, far from the countries
             Vokalia and Consonantia, there live the blind texts. Separated they
@@ -111,7 +111,10 @@
             language ocean. A small river named Duden flows by
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link" title="Weather App"
+            <a
+              href="https://tubular-beignet-9d4d5b.netlify.app/"
+              class="primary-link"
+              title="Weather App"
               >Visit website</a
             >
           </div>
@@ -125,5 +128,6 @@
         </div>
       </div>
     </div>
+    <p class="email">liketodo1903@gmail.com</p>
   </body>
 </html>
