Add responsive style

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <h2 class="mb-6 fs-1 app-name">Weather App</h2>
+          <h2 class="mb-6 fs-1 app-name bigwebpagetext">Weather App</h2>
           <p>
             Far far away, behind the word mountains, far from the countries
             Vokalia and Consonantia, there live the blind texts. Separated they
@@ -125,6 +125,23 @@
             class="img-fluid"
             alt="Weather app picture"
           />
+        </div>
+        <div class="col-md-6">
+          <h2 class="mb-6 fs-1 app-name smallwebpagetext">Weather App</h2>
+          <p>
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <div class="mb-5 mt-5">
+            <a
+              href="https://tubular-beignet-9d4d5b.netlify.app/"
+              class="primary-link"
+              title="Weather App"
+              >Visit website</a
+            >
+          </div>
         </div>
       </div>
     </div>
