--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-md-6">
-          <h2 class="mb-6 fs-1 app-name bigwebpagetext">Weather App</h2>
+        <div class="col-md-6 bigwebpagetext">
+          <h2 class="mb-6 fs-1 app-name">Weather App</h2>
           <p>
             Far far away, behind the word mountains, far from the countries
             Vokalia and Consonantia, there live the blind texts. Separated they
@@ -126,8 +126,8 @@
             alt="Weather app picture"
           />
         </div>
-        <div class="col-md-6">
-          <h2 class="mb-6 fs-1 app-name smallwebpagetext">Weather App</h2>
+        <div class="col-md-6 smallwebpagetext">
+          <h2 class="mb-6 fs-1 app-name">Weather App</h2>
           <p>
             Far far away, behind the word mountains, far from the countries
             Vokalia and Consonantia, there live the blind texts. Separated they
