Add about page content

--- a/about.html
+++ b/about.html
@@ -63,5 +63,14 @@
         </div>
       </div>
     </nav>
+    <h1>Hi! I am Sofiia Telychko</h1>
+    <h2>Frontend Developer, based in UK</h2>
+    <p>
+      For anyone who wants to start learning code, this workshop is very
+      interesting. You will be challenged with different exercises, and
+      everything is well explained, homework and deadlines are good for keep
+      focus
+    </p>
+    <a href="/projects.html"
   </body>
 </html>
