Add button and img to about page

--- a/about.html
+++ b/about.html
@@ -63,14 +63,14 @@
         </div>
       </div>
     </nav>
-    <h1>Hi! I am Sofiia Telychko</h1>
-    <h2>Frontend Developer, based in UK</h2>
-    <p>
+    <h1 class="aboutpage-firstheading">Hi! I am Sofiia Telychko</h1>
+    <h2 class="aboutpage-secondheading">Frontend Developer, based in UK</h2>
+    <p class="aboutpage-text">
       For anyone who wants to start learning code, this workshop is very
       interesting. You will be challenged with different exercises, and
       everything is well explained, homework and deadlines are good for keep
       focus
     </p>
-    <a href="/projects.html"
-  </body>
+    <a href="/projects.html">See my projects</a>
+    <img src="/imges/IMG_20200214_150152.jpg" alt="personal picture"/>
 </html>
