--- a/about.html
+++ b/about.html
@@ -72,5 +72,5 @@
       focus
     </p>
     <a href="/projects.html">See my projects</a>
-    <img src="/imges/IMG_20200214_150152.jpg" alt="personal picture"/>
+    <img class="aboutpage-img" src="/imges/IMG_20200214_150152.jpg" alt="personal picture"/>
 </html>
