--- a/about.html
+++ b/about.html
@@ -29,8 +29,6 @@
     <title>Front-end developer life- Sofiia Telychko</title>
   </head>
   <body>
-    <h2>Sofiia Telychko</h2>
-    <h1>Front-end developer</h1>
     <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Sofiia Telychko</a>
@@ -63,6 +61,9 @@
         </div>
       </div>
     </nav>
+    <div class="container aboutpage">
+      <div class="row">
+        <div class="col-md-6">
     <h1 class="aboutpage-firstheading">Hi! I am Sofiia Telychko</h1>
     <h2 class="aboutpage-secondheading">Frontend Developer, based in UK</h2>
     <p class="aboutpage-text">
@@ -72,5 +73,10 @@
       focus
     </p>
     <a href="/projects.html">See my projects</a>
+    </div>
+    <div class="col=md-6">
     <img class="aboutpage-img" src="/imges/IMG_20200214_150152.jpg" alt="personal picture"/>
+    </div>
+    </div>
+    </div>
 </html>
