Change css for about page
Change ing size and position. Add heading and text styling.

--- a/about.html
+++ b/about.html
@@ -64,19 +64,31 @@
     <div class="container aboutpage">
       <div class="row">
         <div class="col-md-6">
-    <h1 class="aboutpage-firstheading">Hi! I am Sofiia Telychko</h1>
-    <h2 class="aboutpage-secondheading">Frontend Developer, based in UK</h2>
-    <p class="aboutpage-text">
-      For anyone who wants to start learning code, this workshop is very
-      interesting. You will be challenged with different exercises, and
-      everything is well explained, homework and deadlines are good for keep
-      focus
-    </p>
-    <a href="/projects.html">See my projects</a>
+          <div class="aboutpage-content">
+            <h1 class="aboutpage-firstheading">
+              Hi! I am<br />
+              Sofiia Telychko
+            </h1>
+            <h2 class="aboutpage-secondheading">
+              Frontend Developer, based in UK
+            </h2>
+            <p class="aboutpage-text">
+              For anyone who wants to start learning code, this workshop is very
+              interesting. You will be challenged with different exercises, and
+              everything is well explained, homework and deadlines are good for
+              keep focus
+            </p>
+            <a href="/projects.html">See my projects</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img
+            class="aboutpage-img"
+            src="/imges/IMG_20200214_150152.jpg"
+            alt="personal picture"
+          />
+        </div>
+      </div>
     </div>
-    <div class="col=md-6">
-    <img class="aboutpage-img" src="/imges/IMG_20200214_150152.jpg" alt="personal picture"/>
-    </div>
-    </div>
-    </div>
+  </body>
 </html>
