--- a/about.html
+++ b/about.html
@@ -78,7 +78,13 @@
               everything is well explained, homework and deadlines are good for
               keep focus
             </p>
-            <a href="/projects.html">See my projects</a>
+            <br />
+            <a
+              href="/projects.html"
+              class="primary-link"
+              title="See my projects"
+              >See my projects</a
+            >
           </div>
         </div>
         <div class="col-md-6">
@@ -90,5 +96,6 @@
         </div>
       </div>
     </div>
+    <p class="email">liketodo1903@gmail.com</p>
   </body>
 </html>
