--- a/projects.html
+++ b/projects.html
@@ -61,6 +61,28 @@
         </div>
       </div>
     </nav>
-    <h2>My Projects</h2>
+        <div class="container projects">
+            <h1 class="projectspage-firstheading">
+              My Projects
+            </h1>
+          <div class="row">
+          <div class="col-6">
+             <img  src="/imges/SharedScreenshot.jpg"
+            class="img-fluid"
+            alt="Weather app picture">
+          </div>
+            <h3>Weather app Project</h3>
+            <p> Build with HTML and CSS</p>
+          </div>
+           <div class="col-6">
+             <img  src="/imges/WeqatherProject.jpg"
+            class="img-fluid"
+            alt="Weather app picture">
+           </div>
+            <h3>Weather app Project</h3>
+            <p> Build with HTML and CSS</p>
+          </div>
+          </div>
+    <p class="email">liketodo1903@gmail.com</p>
   </body>
 </html>
