Add css styling to page

--- a/projects.html
+++ b/projects.html
@@ -66,21 +66,20 @@
               My Projects
             </h1>
           <div class="row">
-          <div class="col-6">
+          <div class="col-6 mb-3">
              <img  src="/imges/SharedScreenshot.jpg"
             class="img-fluid"
             alt="Weather app picture">
-          </div>
+
             <h3>Weather app Project</h3>
             <p> Build with HTML and CSS</p>
           </div>
-           <div class="col-6">
+           <div class="col-6 mb-3">
              <img  src="/imges/WeqatherProject.jpg"
             class="img-fluid"
             alt="Weather app picture">
-           </div>
             <h3>Weather app Project</h3>
-            <p> Build with HTML and CSS</p>
+            <p> Build with HTML, CSS and JavaScript</p>
           </div>
           </div>
     <p class="email">liketodo1903@gmail.com</p>
