--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
               My Projects
             </h1>
           <div class="row">
-          <div class="col-6 mb-3">
+          <div class="col-md-6 mb-3">
              <img  src="/imges/SharedScreenshot.jpg"
             class="img-fluid"
             alt="Weather app picture">
@@ -74,7 +74,7 @@
             <h3>Weather app Project</h3>
             <p> Build with HTML and CSS</p>
           </div>
-           <div class="col-6 mb-3">
+           <div class="col-md-6 mb-3">
              <img  src="/imges/WeqatherProject.jpg"
             class="img-fluid"
             alt="Weather app picture">
