Change contact information styling

--- a/about.html
+++ b/about.html
@@ -96,6 +96,6 @@
         </div>
       </div>
     </div>
-    <p class="email">liketodo1903@gmail.com</p>
+    <p id="email">liketodo1903@gmail.com</p>
   </body>
 </html>
