--- a/projects.html
+++ b/projects.html
@@ -82,6 +82,6 @@
             <p> Build with HTML, CSS and JavaScript</p>
           </div>
           </div>
-    <p class="email">liketodo1903@gmail.com</p>
+    <p id="email">liketodo1903@gmail.com</p>
   </body>
 </html>
