--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="/projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Contact me</a>
+              <a class="nav-link" href="#email">Contact me</a>
             </li>
           </ul>
         </div>
