Add contact email to footer

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
         </div>
       </div>
     </div>
-    <p id="email">liketodo1903@gmail.com</p>
+    <footer>
+      <p id="email">liketodo1903@gmail.com</p>
+    </footer>
   </body>
 </html>
