--- a/about.html
+++ b/about.html
@@ -96,6 +96,8 @@
         </div>
       </div>
     </div>
-    <p id="email">liketodo1903@gmail.com</p>
+    <footer>
+      <p id="email">liketodo1903@gmail.com</p>
+    </footer>
   </body>
 </html>
