--- a/projects.html
+++ b/projects.html
@@ -82,6 +82,8 @@
             <p> Build with HTML, CSS and JavaScript</p>
           </div>
           </div>
-    <p id="email">liketodo1903@gmail.com</p>
+          <footer>
+               <p id="email">liketodo1903@gmail.com</p>
+          </footer>
   </body>
 </html>
