Make responsive heading for hamepage

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         </div>
       </div>
     </nav>
-    <h1>Sofiia Telychko</h1>
+    <div class="homepage-heading">
+      <h1>Sofiia Telychko</h1>
+    </div>
     <p class="between-text">Project which my best projects be choice to show</p>
     <div class="container">
       <div class="row">
